working with user profile name displayed and all tests passing

--- a/html/questions.html
+++ b/html/questions.html
@@ -17,6 +17,10 @@
 
     <main>
 
+        <section class="name">
+            <span id="name"></span>
+        </section>
+
         <form id="form-questions">
 
             <fieldset>
