--- a/html/results.html
+++ b/html/results.html
@@ -17,6 +17,10 @@
 
     <main>
 
+        <section class="name">
+            <span id="name"></span>
+        </section>
+
         <section>
             You're a <span id="person-type"></span>.
         </section>
